# confessions

./: README.md
backend/: .env.development  .env.production  .env.staging  .env.template  .gitignore  Confessions_API.postman_collection.json  Confessions_Local.postman_environment.json  Dockerfile  README.md  connection.py  image_processing.py  main.py  models.py  pyproject.toml  requirements.txt
backend-imgproc-confessing/: .env.development  .env.production  .env.staging  README.md  cloud-run-confessions-fast-api-server.yaml  connection.py  docker-compose.development.yaml  main.py  requirements.txt
backend-vidgen/: .env.staging  .gitignore  Dockerfile  README.md  main.py  populate_video_json.py  requirements.txt  vidgen.py
backend/db/: migrate.py  schema.sql
backend/src/: connection.py  image_processing.py  models.py  ocr_functions.py  text_processing.py
backend/tests/: test_process_images.py
confessions/: .gitignore
frontend/: .env.production  README.md  index.html  package-lock.json  package.json
frontend-admin/: .env.example  README.md  package-lock.json  package.json
frontend-admin/src/: Router.tsx
frontend-admin/src/components/: ProtectedRoute.tsx  app-header.tsx  app-navbar.tsx  confession-card.tsx
frontend-admin/src/config/: app.ts  menu.ts
frontend-admin/src/pages/: ExportConfessions.tsx  Login.tsx  ProcessImages.tsx
frontend-client/: .env.example  README.md  package-lock.json
frontend-client/src/: Router.tsx
frontend-client/src/components/: app-navbar.tsx  floating-action-button.tsx
frontend-client/src/components/ui/: textarea.tsx
frontend-client/src/config/: app.ts  menu.ts
frontend-client/src/pages/: Post.tsx
frontend-confessing/: .env.production  Dockerfile  README.md  package-lock.json
frontend-confessing-firebase-hosting/: .firebaserc  README.md
frontend-confessing-firebase-hosting/src/components/common/: Navbar.js
frontend-vidgen/: README.md
frontend-vidgen/src/: App.js
frontend-vidgen/src/components/deleteAllImages/: DeleteAllImages.js
frontend-vidgen/src/components/listImages/: ListImages.jsx
frontend/src/: App.js  Router.tsx  index.js
frontend/src/components/: Routes.js  app-footer.tsx  app-header.tsx  app-layout.tsx  app-navbar.tsx  confession-card.tsx
frontend/src/components/common/: Navbar.js  navbar.js
frontend/src/components/feed/: Feed.css  Feed.js
frontend/src/components/post/: App.css  App.js  Post.css  Post.js
frontend/src/config/: app.ts  menu.ts
frontend/src/pages/: Feed.tsx  Post.tsx
frontend/src/post/: App.js
frontend_bp/: package-lock.json
frontend_vidgen/: .env.production
(+5 files in other folders)
